--- a/css/reset.css
+++ b/css/reset.css
@@ -60,12 +60,13 @@ a:visited {
 a:hover {
 	text-decoration: none;
 }
-ul li {
+ul li, 
+menu li {
 	list-style: none;
 }
-img {
+/*img {
 	vertical-align: top;
-}
+}*/
 
 h1,
 h2,
