--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,30 @@ body {
 	background-color: #37a14c;
 }
 
+/*****************************Изменить***************************/
+
+.header__top-text,
+.header__top-icons {
+	display: inline-block;
+}
+
+.header__top-icons {
+	float: right;
+}
+
+.header__top container::after {
+	content: "";
+	clear: both;
+	display: inline-block;
+	width: 100%;
+}
+
+.header__top-text {
+	line-height: 45px;
+}
+
+/***************************************************************/
+
 .header__content-flex {
 	display: flex;
 	justify-content: space-between;
@@ -22,7 +46,8 @@ body {
 	justify-content: space-between;
 	font-size: 16px;
 	line-height: 45px;
-	border-left: 1px solid  #57e974;;
+	font-weight: bold;
+	border-left: 1px solid #57e974;
 	border-right: 1px solid #247634;
 }
 
@@ -31,9 +56,15 @@ body {
 	/*width: calc((100%-12px)/5);*/
 	flex-grow: 1;
 	flex-basis: 140px;
+	cursor: pointer;
 	border-left: 1px solid #247634;
-	border-right: 1px solid #57e974
-} 
+	border-right: 1px solid #57e974;
+}
+
+.header__menu-item:hover {
+	background: linear-gradient(to bottom, #4cda67, #34a34b);
+}
+
 .header__nav,
 .footer__content {
 	background: linear-gradient(to bottom, #45bb5c, #3d9b50);
@@ -42,7 +73,6 @@ body {
 .news-item-header {
 	background: linear-gradient(to top, #45bb5c, #309444);
 }
-
 
 .header__top-text,
 .header__menu a,
@@ -54,7 +84,6 @@ body {
 .body {
 	display: flex;
 	justify-content: space-between;
-	padding: 18px 0;
 }
 
 .sidebar,
@@ -63,10 +92,17 @@ body {
 }
 .sidebar {
 	flex-grow: 1;
+	padding-right: 18px;
 }
 
-.sidebar__list a {
+.sidebar__item {
 	font-size: 20px;
+	line-height: 53px;
+	border-bottom: 1px solid #e7e7e7;
+	cursor: pointer;
+}
+
+.sidebar__item > a {
 	color: #000000;
 }
 
@@ -78,16 +114,49 @@ body {
 	color: #ff0000;
 }
 
+.sidebar__sublist {
+	display: none;
+	font-size: 16px;
+	line-height: 22px;
+	padding-left: 19px;
+}
+
+.sidebar__item:hover .sidebar__sublist {
+	display: block;
+}
 
 .main__page {
 	flex-grow: 3;
 }
 
-.about__title {
-font-size: 24px;
-font-weight: bold;
-padding: 0 0 18px 0;
+.about {
+	border-bottom: 1px solid #e7e7e7;
 }
+
+.about__title {
+	font-size: 24px;
+	line-height: 53px;
+	font-weight: bold;
+}
+
+.about__text {
+	font-size: 14px;
+	line-height: 1.2;
+	padding: 19px 0 35px;
+	/*-moz-transform: matrix( 0.99263163406386,0,0,1,0,0);
+  -webkit-transform: matrix( 0.99263163406386,0,0,1,0,0);
+  -ms-transform: matrix( 0.99263163406386,0,0,1,0,0);
+*/
+}
+
+.news {
+	padding: 25px 0 25px;
+}
+.news__title {
+	padding-bottom: 20px;
+	font-weight: bold;
+}
+
 .news__items {
 	display: flex;
 	justify-content: space-between;
@@ -104,7 +173,18 @@ padding: 0 0 18px 0;
 
 .news-item-header {
 	height: 89px;
-	padding: 7px;	
+	padding: 10px 6px;
+	font-size: 14px;
+	line-height: 1.2em;
+	border-bottom: 1px solid #57e974;
+}
+
+.news-item-img {
+	border-top: 1px solid #247634;
+}
+.news-item-time {
+	font-weight: bold;
+	padding: 0 0 3px 0;
 }
 
 .footer__contacts {
@@ -117,9 +197,8 @@ padding: 0 0 18px 0;
 }
 
 .footer__contacts-text {
-
 }
 .footer__content-items {
 	padding: 10px 0;
+	font-size: 0;
 }
-
