--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+.clear-fix:after {
+	display: block;
+	clear: both;
+	content: '';
+}
+
 .container {
 	max-width: 981px;
 	margin: 0 auto;
@@ -57,6 +63,12 @@ body {
 	color: #ff0000;
 }
 
+.header__content-contacts a,
+.contacts-items a {
+	float: right;
+	width: 180px;
+}
+
 .footer-contacts__phones p a {
 	color: #000000;
 }
@@ -81,9 +93,9 @@ body {
 	padding: 8px 0 7px;
 }
 
-.header__content-contacts {
-	align-self: stretch;
-	padding: 0 10px 0 22px;
+.header__content-contacts,
+.contacts-items {
+	width: 270px;
 }
 
 .header__content-logo {
@@ -91,26 +103,12 @@ body {
 }
 
 .contacts-items {
-	line-height: 1.4em;
-}
-
-.contacts-items-row3 {
-	padding-top: 4px;
+	line-height: 1.4;
 }
 
 .header-contacts__skype {
 	padding-top: 6px;
-}
-
-.header-contacts__skype span {
-	display: inline-block;
-	width: 87px;
 	background: url(../img/skype.png) no-repeat 90% center;
-}
-
-.contacts-items p span {
-	display: inline-block;
-	width: 87px;
 }
 
 .header__content-btn {
@@ -248,30 +246,7 @@ body {
 
 .news-item-img {
 	border-top: 1px solid #247634;
-
-	/*width: 232px;
-  min-height: 174px;*/
 }
-
-/*padding-bottom: 75%;  задаёт высоту контейнера для 16:9 (если 4:3 — поставьте 75%) */
-
-/*
-.news-item-img {
-  position: relative;
-  padding-bottom: 75%;
-  height: 0;
-  overflow: hidden;
-}
-
-.news-item-img img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-width: 0;
-  outline-width: 0;
-}*/
 
 .news-item:hover {
 	top: -5px;
@@ -292,11 +267,11 @@ body {
 
 .footer__contacts-text {
 	font-size: 20px;
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 
 .footer-contacts__phones {
-	line-height: 1.5em;
+	line-height: 1.5;
 }
 
 .footer__items,
@@ -311,10 +286,3 @@ body {
 	padding: 20px 0;
 	font-size: 14px;
 }
-
-/*
-.responsive {
-  max-width: 100%;;
-  height: auto;
-}
-*/
